--- a/docs/02.后端技术/00.Linux/02.流量复制技术-gor.md
+++ b/docs/02.后端技术/00.Linux/02.流量复制技术-gor.md
@@ -204,74 +204,71 @@ author:
 --output-http value
 Forwards incoming requests to given http address.
 
-# 发送请求和响应统计到ElasticSearch
+# 发送请求和响应统计到 ElasticSearch
 # eg：gor --input-raw :8080 --output-http staging.com --output-http-elasticsearch 'es_host:api_port/index_name'
 --output-http-elasticsearch string
 
+# 当所有 worker 繁忙时输出队列的长度，默认 1000
 --output-http-queue-len int
-Number of requests that can be queued for output, if all workers are busy. default = 1000 (default 1000)
 
+# 允许的重定向次数
 --output-http-redirects int
-Enable how often redirects should be followed.
 
+# http 响应缓冲区大小，超过此大小的数据将被丢弃
 --output-http-response-buffer value
-HTTP response buffer size, all data after this size will be discarded.
 
+# 在进行 TLS 安全连接时不进行 hostname 校验
 --output-http-skip-verify
-Don't verify hostname on TLS secure connection.
 
+# 每 N 毫秒报告一次 http 输出队列状态
 --output-http-stats
-Report http output queue stats to console every N milliseconds. See output-http-stats-ms
 
+# 报告一次 http 输出队列状态的时间间隔，默认 5000 ms
 --output-http-stats-ms int
-Report http output queue stats to console every N milliseconds. default: 5000 (default 5000)
 
+# 指定 http 请求响应的超时时间，默认 5 s
 --output-http-timeout duration
-Specify HTTP request/response timeout. By default 5s. Example: --output-http-timeout 30s (default 5s)
 
+# 如果打开，http 输出响应将设置为所有输出，如stdout, file等。
 --output-http-track-response
-If turned on, HTTP output responses will be set to all outputs like stdout, file and etc.
 
+# 回收空闲 workers 的时间，默认 2 s
 --output-http-worker-timeout duration
-Duration to rollback idle workers. (default 2s)
 
+# 限制最大 worker 数量，使用动态 worker 数量，默认 0 无限制，
 --output-http-workers int
 Gor uses dynamic worker scaling. Enter a number to set a maximum number of workers. default = 0 = unlimited.
 
+# 限制最小 worker 数量，默认 1
 --output-http-workers-min int
-Gor uses dynamic worker scaling. Enter a number to set a minimum number of workers. default = 1.
-
 ```
 #### 4.2 输出到其他 gor 实例
 ```sh
 
+# 采用内部通讯输出到其他 gor 实例
+# eg：gor --input-raw :80 --output-tcp replay.local:28020
 --output-tcp value
-Used for internal communication between Gor instances. Example:
-# Listen for requests on 80 port and forward them to other Gor instance on 28020 port
-gor --input-raw :80 --output-tcp replay.local:28020
 
+# TCP 响应缓冲区大小，超过该大小的数据将被丢弃
 --output-tcp-response-buffer value
-TCP response buffer size, all data after this size will be discarded.
 
+# 使用 TLS 安全连接，另一方的输入应该也要开启 TLS
 --output-tcp-secure
-Use TLS secure connection. --input-file on another end should have TLS turned on as well.
 
+# 在进行 TLS 安全连接时不进行 hostname 校验
 --output-tcp-skip-verify
-Don't verify hostname on TLS secure connection.
 
+# 每 5 s 报告一次 TCP 输出队列状态
 --output-tcp-stats
-Report TCP output queue stats to console every 5 seconds.
 
+# 使用粘性连接，请求与返回使用相同id时，将被发送到同一个连接
 --output-tcp-sticky
-Use Sticky connection. Request/Response with same ID will be sent to the same connection.
 
+# 并行的 tcp 连接数量，默认 10
 --output-tcp-workers int
-Number of parallel tcp connections, default is 10 (default 10)
-
 ```
 #### 4.3 输出到文件
 ```sh
-
 # 将输入的请求写入文件
 # eg：gor --input-raw :80 --output-file ./requests.gor
 --output-file value
@@ -295,16 +292,16 @@ Number of parallel tcp connections, default is 10 (default 10)
 # 每个块的大小，默认 32mb
 --output-file-size-limit value
 ```
+
 #### 4.4 输出到标准输出
 ```sh
-
+# 直接丢弃所有请求
 --output-null
-Used for testing inputs. Drops all requests.
 
+# 输出到屏幕
 --output-stdout
-Used for testing inputs. Just prints to console data coming from inputs.
-
 ```
+
 #### 4.5 二进制输出
 ```sh
 # 将传入的二进制有效负载转发到给定地址
@@ -323,6 +320,7 @@ Used for testing inputs. Just prints to console data coming from inputs.
 # 默认情况下，Gor 动态缩放 worker 数量，也可以直接指定
 --output-binary-workers int
 ```
+
 #### 4.6 Kafka 相关
 ```sh
 # Kafka TLS 配置的 CA 证书
@@ -355,16 +353,15 @@ Used for testing inputs. Just prints to console data coming from inputs.
 # 用于通过外部命令修改流量
 --middleware string
 
-
+# 如果启用，将自动解码请求和响应：Content-Encoding: gzip 和 Transfer-Encoding: chunked，可以与 --output-stdout一起使用
 --prettify-http
-If enabled, will automatically decode requests and responses with: Content-Encoding: gzip and Transfer-Encoding: chunked. Useful for debugging, in conjunction with --output-stdout
 
+# 如果打开，http输出将为每个 TCP 会话创建单独的 worker，分割输出也是基于会话的
 --recognize-tcp-sessions
-[PRO] If turned on http output will create separate worker for each TCP session. Splitting output will session based as well.
 
+# 默认情况下，每个输出获得相同的流量。如果设置为true，则在所有输出中平均分配流量。
 --split-output true
-By default each output gets same traffic. If set to true it splits traffic equally among all outputs.
 
+# 开启队列状态输出
 --stats
-Turn on queue stats output
 ```
