--- a/docs/02.后端技术/04.Kafka/00.Kafka 常用命令介绍.md
+++ b/docs/02.后端技术/04.Kafka/00.Kafka 常用命令介绍.md
@@ -13,7 +13,7 @@ author:
 ---
 
 ::: tip
-从 Kafka 2.2 版本开始，社区推荐用 --bootstrap-server 参数替换 --zookeeper 参数，以下命令基于 kafka 1.1.1 版本
+从 Kafka 2.2 版本开始，社区推荐用 --bootstrap-server 参数替换 --zookeeper 参数，以下命令基于 kafka 1.1.1 版本，Kafka 3.5 版本已经开始标记弃用 zookeeper，预计在 Kafka 4.0 之后将完全移除 zookeeper，将通过 KRaft 管理元数据
 :::
 
 ## 一、主题 
