--- a/docs/02.后端技术/04.Kafka/01.Kafka 最完整的介绍.md
+++ b/docs/02.后端技术/04.Kafka/01.Kafka 最完整的介绍.md
@@ -14,22 +14,22 @@ author:
 
 # 简单介绍
 ## 功能角色
-* ***消息系统：***Kafka 备系统解耦、冗余存储、流量削峰、缓冲、异步通信、扩展性、可恢复性等功能。Kafka 还提供了大多数消息系统难以实现的消息顺序性保障及回溯消费的功能。
+* ***消息系统***：Kafka 备系统解耦、冗余存储、流量削峰、缓冲、异步通信、扩展性、可恢复性等功能。Kafka 还提供了大多数消息系统难以实现的消息顺序性保障及回溯消费的功能。
 
-* ***存储系统：***Kafka 把消息持久化到磁盘，相比于其他基于内存存储的系统而言，有效地降低了数据丢失的风险。得益于 Kafka 的消息持久化功能和多副本机制，可以把Kafka作为长期的数据存储系统来使用，只需要把对应的数据保留策略设置为“永久”或启用主题的日志压缩功能即可。
+* ***存储系统***：Kafka 把消息持久化到磁盘，相比于其他基于内存存储的系统而言，有效地降低了数据丢失的风险。得益于 Kafka 的消息持久化功能和多副本机制，可以把Kafka作为长期的数据存储系统来使用，只需要把对应的数据保留策略设置为“永久”或启用主题的日志压缩功能即可。
 
-* ***流式处理平台：***Kafka 不仅为每个流行的流式处理框架提供了可靠的数据来源，还提供了一个完整的流式处理类库，比如窗口、连接、变换和聚合等各类操作。
+* ***流式处理平台***：Kafka 不仅为每个流行的流式处理框架提供了可靠的数据来源，还提供了一个完整的流式处理类库，比如窗口、连接、变换和聚合等各类操作。
 
 ## 基本概念
-* ***ZooKeeper：***一个开源的分布式协调服务，Kafka通过ZooKeeper来实施对元数据信息的管理，包括集群、broker、主题、分区等内容。
-* ***Producer：***生产者，也就是发送消息的一方，生产者负责创建消息，然后将其投递到Kafka中。
-* ***Consumer：***消费者，也就是接收消息的一方，消费者连接到Kafka上并接收消息，进而进行相应的业务逻辑处理。
-* ***Broker：***服务节点，可以简单地看作一个独立的Kafka服务节点或Kafka服务实例，一个或多个Broker组成了一个Kafka集群。
-* ***Topic：***主题，Kafka中的消息以主题为单位进行归类，生产者负责将消息发送到特定的主题，而消费者负责订阅主题并进行消费。
-* ***Partition：***分区，主题是一个逻辑上的概念，它可以包含一个或多个分区，一个分区只属于单个主题。
-* ***Offset：***偏移量，消息在分区中的唯一标识，Kafka通过它来保证消息在分区内的顺序性，不过offset并不跨越分区，Kafka保证的是分区有序而不是主题有序。
-* ***Replica：***多副本，一个分区对应一个或多个副本，其中leader副本负责处理读写请求，follower副本只负责与leader副本的消息同步，副本分别位于不同的 broker，出现故障时实现自动转移。
-* ***Rebalance：***重平衡，
+* ***ZooKeeper***：一个开源的分布式协调服务，Kafka通过ZooKeeper来实施对元数据信息的管理，包括集群、broker、主题、分区等内容。
+* ***Producer***：生产者，也就是发送消息的一方，生产者负责创建消息，然后将其投递到Kafka中。
+* ***Consumer***：消费者，也就是接收消息的一方，消费者连接到Kafka上并接收消息，进而进行相应的业务逻辑处理。
+* ***Broker***：服务节点，可以简单地看作一个独立的Kafka服务节点或Kafka服务实例，一个或多个Broker组成了一个Kafka集群。
+* ***Topic***：主题，Kafka中的消息以主题为单位进行归类，生产者负责将消息发送到特定的主题，而消费者负责订阅主题并进行消费。
+* ***Partition***：分区，主题是一个逻辑上的概念，它可以包含一个或多个分区，一个分区只属于单个主题。
+* ***Offset***：偏移量，消息在分区中的唯一标识，Kafka通过它来保证消息在分区内的顺序性，不过offset并不跨越分区，Kafka保证的是分区有序而不是主题有序。
+* ***Replica***：多副本，一个分区对应一个或多个副本，其中leader副本负责处理读写请求，follower副本只负责与leader副本的消息同步，副本分别位于不同的 broker，出现故障时实现自动转移。
+* ***Rebalance***：重平衡，
 
 
 # 主题与分区
