--- a/docs/02.后端技术/04.Kafka/01.Kafka 最完整的介绍.md
+++ b/docs/02.后端技术/04.Kafka/01.Kafka 最完整的介绍.md
@@ -20,6 +20,10 @@ author:
 
 * ***流式处理平台***：Kafka 不仅为每个流行的流式处理框架提供了可靠的数据来源，还提供了一个完整的流式处理类库，比如窗口、连接、变换和聚合等各类操作。
 
+![kafka 体系结构](https://cdn.jsdelivr.net/gh/erlangtui/img-bed@master/kafka/image.21z682zcqu9s.webp)
+::: center
+kafka 体系结构
+:::
 ### 基本概念
 * ***ZooKeeper***：一个开源的分布式协调服务，Kafka通过ZooKeeper来实施对元数据信息的管理，包括集群、broker、主题、分区等内容。
 * ***Producer***：生产者，也就是发送消息的一方，生产者负责创建消息，然后将其投递到Kafka中。
@@ -33,7 +37,7 @@ author:
 
 ## 主题与分区
 
-* 从Kafka的底层实现来说，主题和分区都是逻辑上的概念，分区可以有一至多个副本，每个副本对应一个日志文件，每个日志文件对应一至多个日志分段（LogSegment），每个日志分段还可以细分为索引文件、日志存储文件和快照文件等。不过对于使用Kafka进行消息收发的普通用户而言，了解到分区这一层面足以应对大部分的使用场景。本章只针对主题与分区这一层面的内容进行讲解，更底
+* 从Kafka的底层实现来说，主题和分区都是逻辑上的概念，分区可以有一至多个副本，每个副本对应一个日志文件，每个日志文件对应一至多个日志分段（LogSegment），每个日志分段还可以细分为索引文件、日志存储文件和快照文件等。不过对于使用Kafka进行消息收发的普通用户而言，了解到分区这一层面足以应对大部分的使用场景。
 
 
 * 同一主题下的不同分区包含的消息是不同的，分区在存储层面可以看作一个可追加的日志（Log）文件，消息在被追加到分区日志文件的时候都会分配一个特定的偏移量（offset）。offset是消息在分区中的唯一标识，Kafka通过它来保证消息在分区内的顺序性，不过offset并不跨越分区，也就是说，Kafka保证的是分区有序而不是主题有序。
