--- a/docs/02.后端技术/04.Kafka/01.Kafka 最完整的介绍.md
+++ b/docs/02.后端技术/04.Kafka/01.Kafka 最完整的介绍.md
@@ -12,8 +12,8 @@ author:
   link: https://github.com/erlangtui
 ---
 
-## 简单介绍
-### 功能角色
+## 一、简单介绍
+### 1，功能角色
 * ***消息系统***：Kafka 备系统解耦、冗余存储、流量削峰、缓冲、异步通信、扩展性、可恢复性等功能。Kafka 还提供了大多数消息系统难以实现的消息顺序性保障及回溯消费的功能。
 
 * ***存储系统***：Kafka 把消息持久化到磁盘，相比于其他基于内存存储的系统而言，有效地降低了数据丢失的风险。得益于 Kafka 的消息持久化功能和多副本机制，可以把Kafka作为长期的数据存储系统来使用，只需要把对应的数据保留策略设置为“永久”或启用主题的日志压缩功能即可。
@@ -22,9 +22,9 @@ author:
 
 ![kafka 体系结构](https://cdn.jsdelivr.net/gh/erlangtui/img-bed@master/kafka/image.21z682zcqu9s.webp)
 ::: center
-kafka 体系结构
+1.1 kafka 体系结构
 :::
-### 基本概念
+### 2，基本概念
 * ***ZooKeeper***：一个开源的分布式协调服务，Kafka通过ZooKeeper来实施对元数据信息的管理，包括集群、broker、主题、分区等内容。
 * ***Producer***：生产者，也就是发送消息的一方，生产者负责创建消息，然后将其投递到Kafka中。
 * ***Consumer***：消费者，也就是接收消息的一方，消费者连接到Kafka上并接收消息，进而进行相应的业务逻辑处理。
@@ -35,7 +35,12 @@ kafka 体系结构
 * ***Replica***：多副本，一个分区对应一个或多个副本，其中leader副本负责处理读写请求，follower副本只负责与leader副本的消息同步，副本分别位于不同的 broker，出现故障时实现自动转移。
 * ***Rebalance***：再均衡，是指分区的所属权从一个消费者转移到另一消费者的行为，为消费组具备高可用性和伸缩性提供保障，可以根据流量情况动态的增加分区或是增减消费者而不影响消费。不过在再均衡发生期间，消费组内的消费者是无法读取消息的。
 
-## 主题与分区
+![多副本架构](https://cdn.jsdelivr.net/gh/erlangtui/img-bed@master/kafka/image.5z1jvw2jie80.webp)
+::: center
+1.2 多副本架构
+:::
+
+## 二、主题与分区
 
 * 从Kafka的底层实现来说，主题和分区都是逻辑上的概念，分区可以有一至多个副本，每个副本对应一个日志文件，每个日志文件对应一至多个日志分段（LogSegment），每个日志分段还可以细分为索引文件、日志存储文件和快照文件等。不过对于使用Kafka进行消息收发的普通用户而言，了解到分区这一层面足以应对大部分的使用场景。
 
@@ -45,13 +50,17 @@ kafka 体系结构
 
 * Replica：多副本，分区的备份，Kafka 通过增加副本数量可以提升容灾能力。同一分区的不同副本中保存的是相同的消息（在同一时刻，副本之间并非完全一样），副本之间是“一主多从”的关系，其中leader副本负责处理读写请求，follower副本只负责与leader副本的消息同步。副本处于不同的broker中，当leader副本出现故障时，从follower副本中重新选举新的leader副本对外提供服务。Kafka通过多副本机制实现了故障的自动转移，当Kafka集群中某个broker失效时仍然能保证服务可用。
 
+![主题的分区写入](https://cdn.jsdelivr.net/gh/erlangtui/img-bed@master/kafka/image.35jngjivnp40.webp)
+::: center
+2.1 主题的分区写入
+:::
 
-## 生产者
+## 三、生产者
 
-## 消费者
+## 四、消费者
 
-## 日志存储
+## 五、日志存储
 
-## 可靠性
+## 六、可靠性
 
-## 客户端命令
+## 七、客户端命令
