--- a/docs/02.后端技术/04.Kafka/01.Kafka 最完整的介绍.md
+++ b/docs/02.后端技术/04.Kafka/01.Kafka 最完整的介绍.md
@@ -20,11 +20,16 @@ author:
 
 * ***流式处理平台***：Kafka 不仅为每个流行的流式处理框架提供了可靠的数据来源，还提供了一个完整的流式处理类库，比如窗口、连接、变换和聚合等各类操作。
 
+### 2，基本结构
+
+如下图所示，Kafka 通过 zookeeper 管理元数据，生产者向 Kafka 节点发送消息，消费者通过 pull 模式从节点拉取消息。Kafka 节点可以部署在不同的服务器上，实现分布式部署。
+
 ![kafka 体系结构](https://cdn.jsdelivr.net/gh/erlangtui/img-bed@master/kafka/image.21z682zcqu9s.webp)
 ::: center
 1.1 kafka 体系结构
 :::
-### 2，基本概念
+
+### 3，基本概念
 * ***ZooKeeper***：一个开源的分布式协调服务，Kafka通过ZooKeeper来实施对元数据信息的管理，包括集群、broker、主题、分区等内容。
 * ***Producer***：生产者，也就是发送消息的一方，生产者负责创建消息，然后将其投递到Kafka中。
 * ***Consumer***：消费者，也就是接收消息的一方，消费者连接到Kafka上并接收消息，进而进行相应的业务逻辑处理。
@@ -40,9 +45,11 @@ author:
 1.2 多副本架构
 :::
 
+* 如上图所示，创建了 4 Kafka 个节点，3 个分区，每个分区又存在 3 个副本（1 个 leader 副本，2 个 follower 副本）。每个分区的不同副本分别位于不同的节点上，当某个节点故障时，该节点上的 leader 副本对应分区的 follower 副本会重新竞选为 leader 副本，实现故障自动转移。 
+
 ## 二、主题与分区
 
-* 从Kafka的底层实现来说，主题和分区都是逻辑上的概念，分区可以有一至多个副本，每个副本对应一个日志文件，每个日志文件对应一至多个日志分段（LogSegment），每个日志分段还可以细分为索引文件、日志存储文件和快照文件等。不过对于使用Kafka进行消息收发的普通用户而言，了解到分区这一层面足以应对大部分的使用场景。
+* 从Kafka的底层实现来说，主题和分区都是逻辑上的概念，分区可以有一至多个副本，每个副本对应一个日志文件，每个日志文件对应一至多个日志分段（LogSegment），每个日志分段还可以细分为索引文件、日志存储文件和快照文件等。
 
 
 * 同一主题下的不同分区包含的消息是不同的，分区在存储层面可以看作一个可追加的日志（Log）文件，消息在被追加到分区日志文件的时候都会分配一个特定的偏移量（offset）。offset是消息在分区中的唯一标识，Kafka通过它来保证消息在分区内的顺序性，不过offset并不跨越分区，也就是说，Kafka保证的是分区有序而不是主题有序。
