--- a/docs/05.更多/01.网站收藏/02.go 学习网址.md
+++ b/docs/05.更多/01.网站收藏/02.go 学习网址.md
@@ -1,7 +1,7 @@
 ---
-title: go-all
+title: go 学习网址
 date: 2024-07-23 16:55:51
-permalink: /pages/31a63d/
+permalink: /pages/a8e456/
 # sidebar: auto
 categories:
   - 更多
