--- a/docs/02.后端技术/02.Redis/15.主从复制与哨兵.md
+++ b/docs/02.后端技术/02.Redis/15.主从复制与哨兵.md
@@ -50,16 +50,16 @@ author:
 * 故障转移时，哨兵节点会选举出一个从节点晋升为主节点，并节点之间的主从关系；
 
 ### 2，实现原理
-#### 三个定时任务：
+#### 2.1 三个定时任务：
 * 每隔 10 秒，**哨兵节点向主节点和从节点发送 info 信息，获取最新的拓扑结构**，这个过程能够感知到新节点的加入、节点的不可用或是故障转移后的新拓扑结构；
 * 每隔 2 秒，**每个哨兵节点会通过发布订阅的方式交换自己的信息以及对主节点的判断**，这个过程能够发现新的哨兵节点，以及对主节点状态的判断可以作为后面客观下线以及领导者选举的依据；
 * 每隔 1 秒，**每个哨兵节点会向主节点、从节点、其余哨兵节点发送一条ping命令做一次心跳检测**，来确认这些节点当前是否可达，作为节点失败判断的重要依据；
 
-#### 主客观下线
+#### 2.2 主客观下线
 * 在心跳检测时，如果超过一定时间某个节点还没有回应，则该哨兵节点认为这个节点不可达，即主观下线；
 * 当主观下线的节点是主节点时，哨兵节点会询问其他节点对主节点的判断，**如果超过一定数量的哨兵节点认为主节点有问题时**，则哨兵节点会做出主节点下线的认定，即客观下线；
 
-#### 主哨兵节点选举
+#### 2.3 主哨兵节点选举
 * 当主节点客观下线后，需要选举出一个哨兵节点作为领导者完成故障转移；
 * 每个在线的哨兵节点都有资格成为领导者，在做出客观下线的决定后，哨兵节点会向其他哨兵节点发送消息要求设置自己为领导者，如果收到消息的哨兵节点没有同意其他节点，则会同意该请求；
 * 当哨兵节点的选票数量超过哨兵节点数量的一半时，将会成为领导者；
