--- a/docs/02.后端技术/04.Kafka/01.Kafka 完整介绍.md
+++ b/docs/02.后端技术/04.Kafka/01.Kafka 完整介绍.md
@@ -34,8 +34,8 @@ author:
 * ***Producer***：生产者，也就是发送消息的一方，生产者负责创建消息，然后将其投递到Kafka中。
 * ***Consumer***：消费者，也就是接收消息的一方，消费者连接到Kafka上并接收消息，进而进行相应的业务逻辑处理。
 * ***Broker***：服务节点，可以简单地看作一个独立的Kafka服务节点或Kafka服务实例，一个或多个Broker组成了一个Kafka集群。
-* ***Topic***：主题，Kafka中的消息以主题为单位进行归类，生产者负责将消息发送到特定的主题，而消费者负责订阅主题并进行消费。
-* ***Partition***：分区，主题是一个逻辑上的概念，它可以包含一个或多个分区，一个分区只属于单个主题。
+* ***Topic***：主题，逻辑上的概念，用于将Kafka中的消息以主题为单位进行归类，生产者负责将消息发送到特定的主题，而消费者负责订阅主题并进行消费。
+* ***Partition***：分区，逻辑上的概念，主题可以包含一个或多个分区，一个分区只属于单个主题，一个分区对应一个日志文件，这些日志文件才是消息真正写入的地方。
 * ***Offset***：偏移量，消息在分区中的唯一标识，Kafka通过它来保证消息在分区内的顺序性，不过offset并不跨越分区，Kafka保证的是分区有序而不是主题有序。
 * ***Replica***：多副本，一个分区对应一个或多个副本，其中leader副本负责处理读写请求，follower副本只负责与leader副本的消息同步，副本分别位于不同的 broker，出现故障时实现自动转移。
 * ***Rebalance***：再均衡，是指分区的所属权从一个消费者转移到另一消费者的行为，为消费组具备高可用性和伸缩性提供保障，可以根据流量情况动态的增加分区或是增减消费者而不影响消费。不过在再均衡发生期间，消费组内的消费者是无法读取消息的。
