--- a/docs/02.后端技术/06.Hive/01.Hive常用的命令.md
+++ b/docs/02.后端技术/06.Hive/01.Hive常用的命令.md
@@ -12,6 +12,40 @@ author:
   link: https://github.com/erlangtui
 ---
 
+- 创建外部表
+```sql
+CREATE EXTERNAL TABLE req_sfst_time_20241010_v3 (
+    cip STRING,
+    sip STRING,
+    rtime INT
+)
+ROW FORMAT DELIMITED
+  FIELDS TERMINATED BY '\t'
+  LINES TERMINATED BY '\n'
+  NULL DEFINED AS ''
+STORED AS INPUTFORMAT
+  'org.apache.hadoop.mapred.TextInputFormat'
+OUTPUTFORMAT
+  'org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat'
+LOCATION
+  'viewfs://c9/user_ext/ad_engine/warehouse/req_sfst_time_20241010_v3'
+```
+
+- 将查询结果插入表中
+```sql
+INSERT INTO TABLE req_sfst_time_20241010_v3
+select 
+    get_json_object(json_log, '$.server_addr') AS cip,
+    get_json_object(tt.item, '$.ip') AS sip,
+    cast(get_json_object(tt.item, '$.rtime') as int) as rtime
+from ods_ad_req_log_json_hour 
+lateral view explode(split(regexp_replace(regexp_replace(get_json_object(json_log, '$.products'), '\\[|\\]',''),'\\}\\,\\{','\\}\\@@\\{'),'\\@@')) tt as item 
+where 
+    dt='20241010'
+    and get_json_object(item, '$.product')='Sfst'
+    and cast(get_json_object(item, '$.rc') as int)>=100 
+    and cast(get_json_object(item, '$.rc') as int)<=600;
+```
 
 - 时间戳转换
     - `from_unixtime(CAST(current_timestamp() AS bigint) - 86400, 'yyyyMMdd')`
@@ -25,10 +59,31 @@ author:
 - 列转行
     - `lateral view explode(split(adid,',')) tt as ad`
     - ad 是多列转换成一列后的列名
+- json 字符串列转行
+    - SELECT explode(split(regexp_replace(regexp_replace('[{"website":"www.baidu.com","name":"百度"},{"website":"google.com","name":"谷歌"}]', '\\]',''),'\\}\\,\\{','\\}\\;\\{'),'\\;'));
+    ```sql
+        SELECT explode(split(
+            regexp_replace(
+                regexp_replace(
+                    '[
+                        {"website":"www.baidu.com","name":"百度"},
+                        {"website":"google.com","name":"谷歌"}
+                    ]', 
+                    '\\[|\\]',''),  --将 Json 数组两边的中括号去掉
+                    
+                        '\\}\\,\\{'    --将 Json 数组元素之间的逗号换成分号
+                        ,'\\}\\;\\{'),
+                        
+                        '\\;'));    --以分号作为分隔符
+    ```
+    - 原选项就是字符串，不是hive数组
 
 - 字符串切割
     - `substr(plat, 3, 3)`
-    - 下标从 1 开始
+    - 下标从 1 开始，开始位置，截取长度
+- 字符串拼接
+    - `concat_ws('.', "aaa", "bbb")`
+    - 通过拼接符将两个字符串拼接起来
 
 - 条件语句
     - `select adid, case when (length(uid)>9 and cast(substr(uid,-9,3) as int)<50) or uid="" then "new" else "old" end, count(1)`
