--- a/docs/01.语言/01.Go/01.slice.md
+++ b/docs/01.语言/01.Go/01.slice.md
@@ -71,7 +71,7 @@ func main() {
 
 ### 2，growslice扩容逻辑
 - go1.17.13，runtime/slice.go，181行
-- 如果计划后的容量大于当前容量的两倍时，**直接扩容**至该容量，再进行内存对齐；
+- 如果计划扩容后的容量大于当前容量的两倍时，**直接扩容**至该容量，再进行内存对齐；
 - 否则：
    - <span style="color: red;">如果计划扩容后的容量小于1024，则将当前容量**翻倍扩容**，再进行内存对齐</span>；
    - <span style="color: red;">如果计划扩容后的容量大于或等于1024，则将当前容量**1.25倍的扩容**，再进行内存对齐</span>；
@@ -154,8 +154,8 @@ func main() {
 ```
 :::
 * 对以上代码进行编译，执行 `go tool compile -S main.go`，会得到上面的输出；
-* 会发现第六行调用了 `runtime.makeslice` 函数，创建了切片；
-* 第八行调用了 `runtime.growslice` 进行了扩容；
+* 在编译结果的第 21 行，即代码的第 6 行调用了 `runtime.makeslice` 函数，创建了切片；
+* 在编译结果的第 32 行，即代码的第 8 行调用了 `runtime.growslice` 进行了扩容；
 
 ## 五、重要函数
 ### 1，makeslice 函数
