--- a/docs/01.语言/01.Go/02.map.md
+++ b/docs/01.语言/01.Go/02.map.md
@@ -75,6 +75,7 @@ author:
 * 如果 map 不是处于扩容中，根据 key 的哈希值找到其对应的桶，在该存储桶及其溢出桶中删除；
 * 如果 map 正处于扩容中，根据 key 的哈希值找到其对应的旧存储桶，如果该桶还没有迁移，则将该桶及其溢出桶的数据迁移到新存储桶中，在新存储桶中进行数据删除；
 * **删除数据后，需要更新顶部哈希值的状态，即标记该 key 对应的单元格及其之后是否还有数据；没有数据时，同样还需要更其前面的单元格的顶部哈希值**；
+* 当频繁的插入数据后 map 可能会创建大量的溢出桶，但此时如果没有触发扩容，又频繁的删除数据，那么**会导致 map 申请了大量的内存没有存储足够的数据又无法释放的情况**，这也是内存泄漏的一种表现；
 
 ## 三、基本用法
 ### 1，应用场景
@@ -86,10 +87,10 @@ author:
   * **统计数据**：map 可以用于统计数据，例如记录某个文本中不同单词出现的次数；
 
 ### 2，注意事项
-* map 是<span style="color: red;">**并发读写不安全**</span>的数据结构，在多个 goroutine 同时读写 map，时需要对整个 map 单独加互斥锁或读写锁；对整个 map 添加互斥锁时，如果 map 中的数据量非常大，那么锁的粒度也很多，可能会导致性能瓶颈，如果要使用并发安全的 map，可以使用 sync.Map](http://erlangtui.top/pages/6855f1/)；
+* map 是<span style="color: red;">**并发读写不安全**</span>的数据结构，在多个 goroutine 同时读写 map，是需要对整个 map 单独加互斥锁或读写锁；对整个 map 添加互斥锁时，如果 map 中的数据量非常大，那么锁的粒度也很大，可能会导致性能瓶颈，如果要使用并发安全的 map，可以使用 [sync.Map](http://erlangtui.top/pages/6855f1/)；
 * 在使用 map 之前，应**先进行初始化**，否则可能会 panic，可以使用 make 函数或字面量方式进行初始化；
 * map 的<span style="color: red;">**键类型必须支持相等运算符（==）**</span>，这意味着内置的基本类型和某些结构类型可以作为键类型；但是，切片、映射和函数类型不支持相等运算符，因此不能用作键类型；
-* 遍历 map 的时候，**迭代的顺序是不确定的**,每次遍历 map，得到的键值对的顺序可能不同；
+* 遍历 map 的时候，**迭代的顺序是不确定的**，每次遍历 map，得到的键值对的顺序可能不同；
 * map 在底层使用哈希表实现，会占用一定的内存，当需要处理大量数据时，需要注意 map 的内存占用情况，以免**导致内存不足**；在某些高并发服务中，一波峰值流量导致 map 扩容后有很多存储桶，峰值过后从 map 中删除元素，这些存储桶并不会回收掉，map 可能依旧很大，**表现为内存没有被释放**；
 
 ## 四、源码解读
