--- a/docs/02.后端技术/01.MySql/00.MySQL 基本介绍.md
+++ b/docs/02.后端技术/01.MySql/00.MySQL 基本介绍.md
@@ -129,6 +129,14 @@ like_or_where: {
   SELECT JSON_EXTRACT('{"id": 1, "name": "John"}', '$.name');
   ```
 
+- **JSON_LENGTH(json_val)**：用于计算JSON数组的长度。
+  ```sql
+  SELECT JSON_LENGTH(JSON_EXTRACT('{"msg":{"code":[11]}}', '$.msg.code'));
+  ```
+- **JSON_VALID(json_val)**：用于校验字符串是否是JSON字符串。
+  ```sql
+  SELECT JSON_VALID('{}');
+  ```
 - **JSON_UNQUOTE(json_val)**：去除JSON字符串的引号。
 
   ```sql
