--- a/docs/02.后端技术/01.MySql/11.MySQL 优化器简述.md
+++ b/docs/02.后端技术/01.MySql/11.MySQL 优化器简述.md
@@ -35,7 +35,7 @@ author:
 * 示例：`EXPLAIN	SELECT	*	FROM	s1	WHERE	key1	>	'z'	AND	key1	LIKE	'%b';`。
 
 ### 6.Using where
-* 全表扫描且使用条件，当使⽤全表扫描来执⾏对某个表的查询，并且该语句的 WHERE ⼦句中有针对该表的搜索条件时以及当使⽤索引访问来执⾏对某个表的查询，并且该语句的WHERE⼦句中有除了该索引包含的列之外的其他搜索条件时，都会出现该提示；
+* 全表扫描且使用条件，当使⽤全表扫描来执⾏对某个表的查询，并且该语句的WHERE⼦句中有除了该索引包含的列之外的其他搜索条件时，都会出现该提示；
 * 示例：`	EXPLAIN	SELECT	*	FROM	s1	WHERE	common_field	=	'a';`，`	EXPLAIN	SELECT	*	FROM	s1	WHERE	key1	=	'a'	AND	common_field	=	'a';`。
 
 ### 7.Using filesort
