--- a/docs/02.后端技术/01.MySql/00.MySQL 基本介绍.md
+++ b/docs/02.后端技术/01.MySql/00.MySQL 基本介绍.md
@@ -108,7 +108,7 @@ like_or_where: {
 ### 2，json 相关
 - 在MySQL中，处理JSON数据的功能是从MySQL 5.7.8版本开始引入的，以下是一些常用的MySQL JSON相关命令和函数：
 
-#### JSON 数据类型
+#### 2.1 JSON 数据类型
 - 从MySQL 5.7.8开始，MySQL引入了对JSON数据类型的支持；
 
 - **定义JSON列**
@@ -122,55 +122,65 @@ like_or_where: {
   -- 这样就可以在`data`列中存储JSON格式的数据
   ```
 
-#### JSON 函数和操作
+#### 2.2 JSON_EXTRACT
 - **JSON_EXTRACT(json_doc, path)**：从JSON字符串中提取数据。
 
   ```sql
   SELECT JSON_EXTRACT('{"id": 1, "name": "John"}', '$.name');
   ```
 
-- **JSON_LENGTH(json_val)**：用于计算JSON数组的长度。
-  ```sql
-  SELECT JSON_LENGTH(JSON_EXTRACT('{"msg":{"code":[11]}}', '$.msg.code'));
-  ```
+#### 2.3 JSON_VALID
 - **JSON_VALID(json_val)**：用于校验字符串是否是JSON字符串。
   ```sql
   SELECT JSON_VALID('{}');
   ```
+
+#### 2.4 JSON_UNQUOTE
 - **JSON_UNQUOTE(json_val)**：去除JSON字符串的引号。
 
   ```sql
   SELECT JSON_UNQUOTE('"John"');
   ```
 
+#### 2.5 JSON_SEARCH
 - **JSON_SEARCH(json_doc, one_or_all, search_str[, escape_char])**：在JSON字符串中搜索指定的字符串。
 
   ```sql
   SELECT JSON_SEARCH('{"id": 1, "name": "John"}', 'one', 'John');
   ```
 
+#### 2.6 JSON_INSERT
 - **JSON_INSERT(json_doc, path, val[, path, val]...)**：向JSON字符串插入数据。
 
   ```sql
   SELECT JSON_INSERT('{"id": 1}', '$.name', 'John');
   ```
 
+#### 2.7 JSON_REPLACE
 - **JSON_REPLACE(json_doc, path, val[, path, val]...)**：替换JSON字符串中的数据。
 
   ```sql
   SELECT JSON_REPLACE('{"id": 1, "name": "Jane"}', '$.name', 'John');
   ```
 
+#### 2.8 JSON_SET
 - **JSON_SET(json_doc, path, val[, path, val]...)**：设置JSON字符串中的数据。
 
   ```sql
   SELECT JSON_SET('{"id": 1}', '$.name', 'John');
   ```
 
+#### 2.9 JSON_CONTAINS
 - **JSON_CONTAINS(json_doc, val[, path])**：检查JSON字符串是否包含指定的值。
 
   ```sql
   SELECT JSON_CONTAINS('["apple", "banana", "cherry"]', '"banana"');
+  ```
+
+#### 2.10 JSON_LENGTH
+- **JSON_LENGTH(json_val)**：用于计算JSON数组的长度。
+  ```sql
+  SELECT JSON_LENGTH(JSON_EXTRACT('{"msg":{"code":[11]}}', '$.msg.code'));
   ```
 
 #### 简单示例
