--- a/docs/02.后端技术/00.Linux/04.jq命令的基本介绍.md
+++ b/docs/02.后端技术/00.Linux/04.jq命令的基本介绍.md
@@ -13,17 +13,15 @@ author:
 ---
 # 常用命令-jq
 
-[[_TOC_]]
-
-- [jq](https://stedolan.github.io/jq/) 是个非常强大的处理 JSON 数据的命令行工具，本文主要讲的是常用的 <jq filter> ，大部分操作可以通过 [jq play](https://jqplay.org/) 直接在线测试。
+[jq](https://stedolan.github.io/jq/) 是个非常强大的处理 JSON 数据的命令行工具，本文主要讲的是常用的 `<jq filter>` ，大部分操作可以通过 [jq play](https://jqplay.org/) 直接在线测试。
 
 ## 一、基本操作
 
 - jq 的命令行使用方法如下:
 ``` sh
 $ jq -h
-jq - commandline JSON processor [version 1.5]
-Usage: jq [options] <jq filter> [file...]
+# jq - commandline JSON processor [version 1.5]
+# Usage: jq [options] <jq filter> [file...]
 ```
 
 ### 1 数据输出
@@ -31,72 +29,72 @@ Usage: jq [options] <jq filter> [file...]
 
 - 默认不指定 filter 就会原样输出，也可以使用 `.` 过滤器
 
-```bash
-$ echo '{"url": "[mozillazg.com](http://mozillazg.com/)"}' |jq .
-{
-  "url": "[mozillazg.com](http://mozillazg.com/)"
-}
+``` sh
+echo '{"url": "[mozillazg.com](http://mozillazg.com/)"}' |jq .
+# {
+#   "url": "[mozillazg.com](http://mozillazg.com/)"
+# }
 ```
 
 #### 1.2 紧凑（compact）输出
 
-```bash
-$ echo '{
+``` sh
+echo '{
   "b": "hello",
   "d": "hello",
   "a": "hello",
   "c": "hello"
 }'  | jq --compact-output
-{"b":"hello","d":"hello","a":"hello","c":"hello"}
+# {"b":"hello","d":"hello","a":"hello","c":"hello"}
 ```
 
-``` shell
-$ echo '{"k1":"v1","k2":"v2"}' | jq   '[.k1, .k3 // ""]' 
-[
-  "v1",
-  ""
-]
-$ echo '{"k1":"v1","k2":"v2"}' | jq  -c '[.k1, .k3 // ""]'
-["v1",""]
+``` sh
+echo '{"k1":"v1","k2":"v2"}' | jq   '[.k1, .k3 // ""]' 
+# [
+#   "v1",
+#   ""
+# ]
+echo '{"k1":"v1","k2":"v2"}' | jq  -c '[.k1, .k3 // ""]'
+# ["v1",""]
 ```
 
 #### 1.3 按照 Key 排序删除
 
-```bash
-$ echo '{
+``` sh
+echo '{
   "b": "hello",
   "d": "hello",
   "a": "hello",
   "c": "hello"
 }' | jq --sort-keys
-{
-  "a": "hello",
-  "b": "hello",
-  "c": "hello",
-  "d": "hello"
-}
+# {
+#   "a": "hello",
+#   "b": "hello",
+#   "c": "hello",
+#   "d": "hello"
+# }
 ```
 
 ### 2 object 操作
 
 #### 2.1 获取某个 key 的值
 
-``` shell
-.key, .foo.bar, .["key"]
+``` sh
+- `.key, .foo.bar, .["key"]`
 
-$ echo '{"url": "[mozillazg.com](http://mozillazg.com/)"}' |jq .url
-"[mozillazg.com](http://mozillazg.com/)"
-$ echo '{"url": "[mozillazg.com](http://mozillazg.com/)"}' | jq '.["url"]'
-"[mozillazg.com](http://mozillazg.com/)"
+echo '{"url": "[mozillazg.com](http://mozillazg.com/)"}' |jq .url
+# "[mozillazg.com](http://mozillazg.com/)"
+echo '{"url": "[mozillazg.com](http://mozillazg.com/)"}' | jq '.["url"]'
+# "[mozillazg.com](http://mozillazg.com/)"
 ```
 
-* 可以在后面加个问号表示当输入不是 object 时不会报错 .key? :
+* 可以在后面加个问号表示当输入不是 object 时不会报错 `.key?` :
 
 ``` sh
-$ echo '1' |jq '.a'
-jq: error (at <stdin>:1): Cannot index number with string "a"
-$ echo '1' |jq '.a?'
-$
+echo '1' |jq '.a'
+# jq: error (at <stdin>:1): Cannot index number with string "a"
+echo '1' |jq '.a?'
+
 ```
 
 * `?` 规则适合所有正确的 filter，在 filter 最后加上 `?` 可以忽略错误信息
@@ -104,83 +102,80 @@ $
 #### 2.2 取某几个 key 的值
 
 ``` sh
-$ echo '{"foo": 42, "bar": "something else", "baz": true}' | jq '.foo, .bar'
-42
-"something else"
+echo '{"foo": 42, "bar": "something else", "baz": true}' | jq '.foo, .bar'
+# 42
+# "something else"
 
-$ echo '{"foo": 42, "bar": "something else", "baz": true}' | jq '[.foo, .bar]'
-[
-  42,
-  "something else"
-]
+echo '{"foo": 42, "bar": "something else", "baz": true}' | jq '[.foo, .bar]'
+# [
+#   42,
+#   "something else"
+# ]
 
-$ echo '{"foo": 42, "bar": "something else", "baz": true}' | jq -c '[.foo, .bar]'
-[42,"something else"]
+echo '{"foo": 42, "bar": "something else", "baz": true}' | jq -c '[.foo, .bar]'
+# [42,"something else"]
 
-$ echo '{"foo": 42, "bar": "something else", "baz": true}' | jq -c '{foo: .foo, bar:.bar}'
-{"foo":42,"bar":"something else"}
-
+echo '{"foo": 42, "bar": "something else", "baz": true}' | jq -c '{foo: .foo, bar:.bar}'
+# {"foo":42,"bar":"something else"}
 ```
 
 #### 2.3 所有的 key 组成的数组
 
 ``` sh
-$ echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "name": "mozillazg"}' |jq keys
-[
-  "name",
-  "url"
-]
+echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "name": "mozillazg"}' |jq keys
+# [
+#   "name",
+#   "url"
+# ]
 ```
 
 #### 2.4 所有的 value
 
 ``` sh
-$ echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "name": "mozillazg"}' |jq .[]
-"[mozillazg.com](http://mozillazg.com/)"
-"mozillazg"
+echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "name": "mozillazg"}' |jq .[]
+# "[mozillazg.com](http://mozillazg.com/)"
+# "mozillazg"
 ```
 
 #### 2.5 所有的 value 组成的数组
 
 ``` sh
-$ echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "name": "mozillazg"}' |jq [.[]]
-[
-  "[mozillazg.com](http://mozillazg.com/)",
-  "mozillazg"
-]
+echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "name": "mozillazg"}' |jq [.[]]
+# [
+#   "[mozillazg.com](http://mozillazg.com/)",
+#   "mozillazg"
+# ]
 ```
 
 #### 2.6 添加某个字段
 
-refer: https://gist.github.com/joar/776b7d176196592ed5d8
-
 ``` sh
 # 新增：
-$ echo '{"hello":"world"}' | jq '. +={"debug":1}'
-{
-  "hello": "world",
-  "debug": 1
-}
+echo '{"hello":"world"}' | jq '. +={"debug":1}'
+# {
+#   "hello": "world",
+#   "debug": 1
+# }
 
 # 覆盖
-$ echo '{"hello":"world", "debug":"a"}' | jq '. +={"debug":1}'
-{
-  "hello": "world",
-  "debug": 1
-}
+echo '{"hello":"world", "debug":"a"}' | jq '. +={"debug":1}'
+# {
+#   "hello": "world",
+#   "debug": 1
+# }
 
 # 引用变量
 $ debug=100;echo '{"hello":"world", "debug":"a"}' | jq '. +={"debug":'"$debug"'}'
-{
-  "hello": "world",
-  "debug": 100
-}
+# {
+#   "hello": "world",
+#   "debug": 100
+# }
 
 $ debug=100;echo '{"hello":"world", "debug":"a"}' | jq '. +={"debug":"'"$debug"'"}'
-{
-  "hello": "world",
-  "debug": "100"
-}
+# {
+#   "hello": "world",
+#   "debug": "100"
+# }
 ```
 
 ``` sh
@@ -193,9 +188,6 @@ echo '{"hello": "world"}' | jq --arg foo bar '. + {foo: $foo}'
 
 # Override field value
 echo '{"hello": "world"}' | jq --arg foo bar '. + {hello: $foo}'
-{
-  "hello": "bar"
-}
 # {
 #   "hello": "bar"
 # }
@@ -210,54 +202,54 @@ echo '{"hello": "world"}' | jq --arg foo bar '. + {hello: ("not" + $foo)}'
 
 #### 2.7 删除某个字段
 
-```
-$ echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "name": "mozillazg"}' | jq 'del(.name)'
-{
-  "url": "[mozillazg.com](http://mozillazg.com/)"
-}
+``` sh
+echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "name": "mozillazg"}' | jq 'del(.name)'
+# {
+#   "url": "[mozillazg.com](http://mozillazg.com/)"
+# }
 ```
 
 #### 2.8 某字段不存在则使用默认值
 
-``` shell
-$ echo '{"k1":"v1","k2":"v2"}' | jq '.k1, .k3 // ""'
-"v1"
-""
+``` sh
+echo '{"k1":"v1","k2":"v2"}' | jq '.k1, .k3 // ""'
+# "v1"
+# ""
 ```
 
 #### 2.9 判断某字段是否存在
 
 ``` sh
-$ echo '{"k1":"v1","k2":"v2"}' | jq 'has("k1"),has("k3")'
-true
-false
+echo '{"k1":"v1","k2":"v2"}' | jq 'has("k1"),has("k3")'
+# true
+# false
 
-$ echo '{"user":{"profile":{"age":20,"gender":"M"}}}' | jq '.user.profile | has("age")'
-true
+echo '{"user":{"profile":{"age":20,"gender":"M"}}}' | jq '.user.profile | has("age")'
+# true
 
-$ echo '{"user":{"profile":{"age":20,"gender":"M"}}}' | jq '.user.profile | has("address")'
-false
+echo '{"user":{"profile":{"age":20,"gender":"M"}}}' | jq '.user.profile | has("address")'
+# false
 ```
 
 #### 2.10 jq to awk
 
-``` shell
-$ echo '{"k1":"v1","k2":"v2"}' | jq '[.k1, .k2] | map(tostring) | join(",")'
+``` sh
+echo '{"k1":"v1","k2":"v2"}' | jq '[.k1, .k2] | map(tostring) | join(",")'
 # "v1,v2"
 $  echo '{"k1":"v1","k2":"v2"}' | jq '[.k1, .k2] | map(tostring) | join(",")' | sed 's/"//g'
 # v1,v2
-$ echo '{"k1":"v1","k2":"v2"}' | jq '[.k1, .k2] | map(tostring) | join(" ")' | sed 's/"//g'
+echo '{"k1":"v1","k2":"v2"}' | jq '[.k1, .k2] | map(tostring) | join(" ")' | sed 's/"//g'
 # v1 v2
 ```
 
 #### 2.11 删除某元素
 
-``` shell
-$ echo '{"k1":"v1","k2":"v2"}' | jq 'del(.k1)'
+``` sh
+echo '{"k1":"v1","k2":"v2"}' | jq 'del(.k1)'
 # {"k2":"v2"}
-$ echo '[{"name": "tom", "id":"1"}, {"name": "mozillazg","id":"2"}]'  | jq -c 'del(.[].name)'
+echo '[{"name": "tom", "id":"1"}, {"name": "mozillazg","id":"2"}]'  | jq -c 'del(.[].name)'
 # [{"id":"1"},{"id":"2"}]
-$ echo '[{"name": "tom", "id":"1"}, {"name": "mozillazg","id":"2"}]'  | jq -c 'del(.[0].name)'
+echo '[{"name": "tom", "id":"1"}, {"name": "mozillazg","id":"2"}]'  | jq -c 'del(.[0].name)'
 # [{"id":"1"},{"name":"mozillazg","id":"2"}]
 ```
 
@@ -266,23 +258,22 @@ $ echo '[{"name": "tom", "id":"1"}, {"name": "mozillazg","id":"2"}]'  | jq -c 'd
 #### 3.1 取出所有元素
 
 ``` sh
-$ echo '[{"name": "tom"}, {"name": "mozillazg"}]' |jq .[]
-{
-  "name": "tom"
-}
-{
-  "name": "mozillazg"
-}
+echo '[{"name": "tom"}, {"name": "mozillazg"}]' |jq .[]
+# {
+#   "name": "tom"
+# }
+# {
+#   "name": "mozillazg"
+# }
 ```
 
 #### 3.2 取出所有元素的某个key
 
 ``` sh
 echo '[{"k1":1,"k2":2,"k3":3},{"k1":11,"k2":12,"k3":13},{"k1":21,"k2":22,"k3":23}]' | jq '.[]' | jq -c '{k1:.k1}'
-{"k1":1}
-{"k1":11}
-{"k1":21}
-
+# {"k1":1}
+# {"k1":11}
+# {"k1":21}
 ```
 
 #### 3.3 切分(slice)
@@ -290,13 +281,13 @@ echo '[{"k1":1,"k2":2,"k3":3},{"k1":11,"k2":12,"k3":13},{"k1":21,"k2":22,"k3":23
 - `.[1], .[0:2]`
 
 ``` sh
-$ echo '[{"name": "tom"}, {"name": "mozillazg"}, {"name": "jim"}]' |jq  .[1]
+echo '[{"name": "tom"}, {"name": "mozillazg"}, {"name": "jim"}]' |jq  .[1]
 # {
 #   "name": "mozillazg"
 # }
-$ echo '[{"name": "tom"}, {"name": "mozillazg"}, {"name": "jim"}]' |jq  .[1].name
+echo '[{"name": "tom"}, {"name": "mozillazg"}, {"name": "jim"}]' |jq  .[1].name
 # "mozillazg"
-$ echo '[{"name": "tom"}, {"name": "mozillazg"}, {"name": "jim"}]' |jq .[0:2]
+echo '[{"name": "tom"}, {"name": "mozillazg"}, {"name": "jim"}]' |jq .[0:2]
 # [
 #   {
 #     "name": "tom"
@@ -310,15 +301,14 @@ $ echo '[{"name": "tom"}, {"name": "mozillazg"}, {"name": "jim"}]' |jq .[0:2]
 #### 3.4 操作 object 组成的数组
 
 ``` sh
-$ echo '[{"name": "foo"},{"name": "bar"},{"name": "foobar"}]' |jq .[].name
+echo '[{"name": "foo"},{"name": "bar"},{"name": "foobar"}]' |jq .[].name
 # "foo"
 # "bar"
 # "foobar"
 ```
 
-
 ``` sh
-$ echo '[{"name": "foo"},{"name": "bar"},{"name": "foobar"}]' |jq '.[]|.name'
+echo '[{"name": "foo"},{"name": "bar"},{"name": "foobar"}]' |jq '.[]|.name'
 # "foo"
 # "bar"
 # "foobar"
@@ -327,7 +317,7 @@ $ echo '[{"name": "foo"},{"name": "bar"},{"name": "foobar"}]' |jq '.[]|.name'
 * 如果要将结果重新组成数组，可以这样:
 
 ``` sh
-$ echo '[{"name": "foo"},{"name": "bar"},{"name": "foobar"}]' |jq [.[].name]
+echo '[{"name": "foo"},{"name": "bar"},{"name": "foobar"}]' |jq [.[].name]
 # [
 #   "foo",
 #   "bar",
@@ -338,7 +328,7 @@ $ echo '[{"name": "foo"},{"name": "bar"},{"name": "foobar"}]' |jq [.[].name]
 * 也可以使用下面会提到的 map:
 
 ``` sh
-$ echo '[{"name": "foo"},{"name": "bar"},{"name": "foobar"}]' |jq 'map(.name)'
+echo '[{"name": "foo"},{"name": "bar"},{"name": "foobar"}]' |jq 'map(.name)'
 [
   "foo",
   "bar",
@@ -365,7 +355,7 @@ echo  '{"a":"hello"}' | jq  '.a|length'
 ### 4.2 使用多个 filter
 
 ``` sh
-$ echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "name": "mozillazg"}' |jq '.url, .name'
+echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "name": "mozillazg"}' |jq '.url, .name'
 # "[mozillazg.com](http://mozillazg.com/)"
 # "mozillazg"
 ```
@@ -378,12 +368,12 @@ $ echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "name": "mozillazg"}' 
 - 可以通过 | 实现类似管道的功能:
 
 ``` sh
-$ echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "name": "mozillazg"}' |jq '.|.url'
+echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "name": "mozillazg"}' |jq '.|.url'
 # "[mozillazg.com](http://mozillazg.com/)"
 ```
 
 ``` sh
-$ echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "tests": [{"foobar": "v1"}, {"foobar": "v2"}]}' |jq '.tests |.[] |.foobar'
+echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "tests": [{"foobar": "v1"}, {"foobar": "v2"}]}' |jq '.tests |.[] |.foobar'
 # "v1"
 # "v2"
 ```
@@ -391,10 +381,10 @@ $ echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "tests": [{"foobar": "
 - 也可以直接用 shell 的 | 实现:
 
 ``` sh
-$ echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "name": "mozillazg"}' |jq '.' | jq '.url'
+echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "name": "mozillazg"}' |jq '.' | jq '.url'
 # "[mozillazg.com](http://mozillazg.com/)"
 
-$ echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "tests": [{"foobar": "v1"}, {"foobar": "v2"}]}' |jq '.tests' | jq '.[]' | jq '.foobar'
+echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "tests": [{"foobar": "v1"}, {"foobar": "v2"}]}' |jq '.tests' | jq '.[]' | jq '.foobar'
 # "v1"
 # "v2"
 ```
@@ -404,10 +394,10 @@ $ echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "tests": [{"foobar": "
 - length 可以获取字符串或数组的长度:
 
 ``` sh
-$ echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "name": "mozillazg"}' |jq '.url|length'
+echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "name": "mozillazg"}' |jq '.url|length'
 # 13
 
-$ echo '["[mozillazg.com](http://mozillazg.com/)", "mozillazg"]' |jq '.|length'
+echo '["[mozillazg.com](http://mozillazg.com/)", "mozillazg"]' |jq '.|length'
 # 2
 ```
 
@@ -416,13 +406,13 @@ $ echo '["[mozillazg.com](http://mozillazg.com/)", "mozillazg"]' |jq '.|length'
 - map(foo) 可以实现对数组的每一项进行操作，然后合并结果的功能:
 
 ``` sh
-$ echo '["[mozillazg.com](http://mozillazg.com/)", "mozillazg"]' | jq 'map(length)'
+echo '["[mozillazg.com](http://mozillazg.com/)", "mozillazg"]' | jq 'map(length)'
 # [
 #   38,
 #   9
 # ]
 
-$ echo '["[mozillazg.com](http://mozillazg.com/)", "mozillazg"]' | jq 'map(length)|add'
+echo '["[mozillazg.com](http://mozillazg.com/)", "mozillazg"]' | jq 'map(length)|add'
 # 47
 ```
 
@@ -431,7 +421,7 @@ $ echo '["[mozillazg.com](http://mozillazg.com/)", "mozillazg"]' | jq 'map(lengt
 - select(foo) 可以实现对输入项进行判断，只返回符合条件的项:
 
 ``` sh
-$ echo '["[mozillazg.com](http://mozillazg.com/)", "mozillazg"]' | jq 'map(select(.|length > 9))'
+echo '["[mozillazg.com](http://mozillazg.com/)", "mozillazg"]' | jq 'map(select(.|length > 9))'
 # [
 #   "[mozillazg.com](http://mozillazg.com/)"
 # ]
@@ -439,76 +429,69 @@ $ echo '["[mozillazg.com](http://mozillazg.com/)", "mozillazg"]' | jq 'map(selec
 
 ### 5 字符串插值，拼接
 
-- 可以使用 \\(foo) 实现字符串插值功能:
+- 可以使用 `\\(foo)` 实现字符串插值功能:
 
 ``` sh
-$ echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "name": "mozillazg"}' |jq '"hi \\(.name)"'
+echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "name": "mozillazg"}' |jq '"hi \\(.name)"'
 # "hi mozillazg"
 ```
-- 注意要用双引号包围起来，表示是一个字符串。
-
-- 使用 + 实现字符串拼接:
+- 注意要用双引号包围起来，表示是一个字符串，使用 + 实现字符串拼接:
 
 ``` sh
-$ echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "name": "mozillazg"}' |jq '"hi " + .name'
+echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "name": "mozillazg"}' |jq '"hi " + .name'
 # "hi mozillazg"
 ```
 
 ### 6 输出字符串原始值
 
-- 使用 \-r 选项输出字符串原始值而不是 json 序列化后的值:
+- 使用 `\-r` 选项输出字符串原始值而不是 json 序列化后的值:
 
 ``` sh
-$ echo '{"value":"{\"url\":\"[mozillazg.com](http://mozillazg.com/)\"}"}' |jq .value
+echo '{"value":"{\"url\":\"[mozillazg.com](http://mozillazg.com/)\"}"}' |jq .value
 # "{\\"url\\": \\"[mozillazg.com](http://mozillazg.com/)\\"}"
 
-$ echo '{"value":"{\"url\":\"[mozillazg.com](http://mozillazg.com/)\"}"}' |jq -r .value
+echo '{"value":"{\"url\":\"[mozillazg.com](http://mozillazg.com/)\"}"}' |jq -r .value
 # {"url": "[mozillazg.com](http://mozillazg.com/)"}
 ```
 
 ### 7 if/elif/else
 
-- 可以使用 if .. then .. elif .. then .. else .. end 实现条件判断:
+- 可以使用 `if .. then .. elif .. then .. else .. end` 实现条件判断:
 
 ``` sh
-$ echo '[0, 1, 2, 3]' \\
-| jq 'map(if . == 0 then "zero" elif . == 1 then "one" elif . == 2 then "two" else "many" end)'
-[
-  "zero",
-  "one",
-  "two",
-  "many"
-]
+echo '[0, 1, 2, 3]' | jq 'map(if . == 0 then "zero" elif . == 1 then "one" elif . == 2 then "two" else "many" end)'
+# [
+#   "zero",
+#   "one",
+#   "two",
+#   "many"
+# ]
 ```
 
-jq play: [https://jqplay.org/s/y8WwvHISH4](https://jqplay.org/s/y8WwvHISH4)
 
 ### 8 构造 object 或数组
 
 - 可以通过 {} 和 [] 构造新的 object 或 数组。
 
 ```  sh
-$ echo '["[mozillazg.com](http://mozillazg.com/)", "mozillazg"]' |jq '{name: .[1]}'
+echo '["[mozillazg.com](http://mozillazg.com/)", "mozillazg"]' |jq '{name: .[1]}'
 # {
 #   "name": "mozillazg"
 # }
 ```
 
-jq play: [https://jqplay.org/s/sccwJi75jb](https://jqplay.org/s/sccwJi75jb)
 
 
 ``` sh
-$ echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "name": "mozillazg"}' |jq '[.name, .url]'
+echo '{"url": "[mozillazg.com](http://mozillazg.com/)", "name": "mozillazg"}' |jq '[.name, .url]'
 # [
 #   "mozillazg",
 #   "[mozillazg.com](http://mozillazg.com/)"
 # ]
 ```
 
-jq play: [https://jqplay.org/s/LYflwM4kJM](https://jqplay.org/s/LYflwM4kJM)
-
 ``` sh
-$ echo '{"name": "mozillazg", "ages": [1, 2]}' | jq '{name, age: .ages[]}'
+echo '{"name": "mozillazg", "ages": [1, 2]}' | jq '{name, age: .ages[]}'
 # {
 #   "name": "mozillazg",
 #   "age": 1
@@ -519,21 +502,17 @@ $ echo '{"name": "mozillazg", "ages": [1, 2]}' | jq '{name, age: .ages[]}'
 # }
 ```
 
-jq play: [https://jqplay.org/s/s1GiNkp\_Ed](https://jqplay.org/s/s1GiNkp_Ed)
-
 ### 9 数组 join
 
 ``` sh
-$ echo '["[mozillazg.com](http://mozillazg.com/)", "mozillazg"]' | jq '.|join(" | ")'
+echo '["[mozillazg.com](http://mozillazg.com/)", "mozillazg"]' | jq '.|join(" | ")'
 # "[mozillazg.com](http://mozillazg.com/) | mozillazg"
 ```
-
-jq play: [https://jqplay.org/s/1ckAfiLKA3](https://jqplay.org/s/1ckAfiLKA3)
 
 ### 10 字符串 split
 
 ``` sh
-$ echo '"[mozillazg.com](http://mozillazg.com/) | mozillazg"' |jq 'split(" | ")'
+echo '"[mozillazg.com](http://mozillazg.com/) | mozillazg"' |jq 'split(" | ")'
 # [
 #   "[mozillazg.com](http://mozillazg.com/)",
 #   "mozillazg"
@@ -578,10 +557,6 @@ cat file | jq  '.services|to_entries[]' | jq -c '{key:.key, price:.value|to_entr
 ```
 
 
-jq play: [https://jqplay.org/s/\_7uGMWvmUh](https://jqplay.org/s/_7uGMWvmUh)
-
-更多的函数和用法详见 [官方文档](https://stedolan.github.io/jq/manual/)
-
 ### 12 算数运算
 
 ``` sh
@@ -594,11 +569,9 @@ echo '{"k":"k", "v":10}' | jq  '{k:.k, v:(.v*10)}'
 
 ### 13 jq 引用 shell 变量
 
-refer: https://www.baeldung.com/linux/jq-passing-bash-variables
-
 ``` sh
 $ export k="v"
-$ echo '{"a":1}' | jq --arg k $k -c '{a:.a,k:$k}'
+echo '{"a":1}' | jq --arg k $k -c '{a:.a,k:$k}'
 # {"a":1,"k":"v"}
 ```
 
