--- a/docs/04.计算机基础/03.数据结构与算法/01.常见算法题框架.md
+++ b/docs/04.计算机基础/03.数据结构与算法/01.常见算法题框架.md
@@ -11,6 +11,47 @@ author:
   name: erlangtui
   link: https://github.com/erlangtui
 ---
+
+## 双指针
+* fast、slow 快慢指针，slow 走一步，fast 走两步：
+    * 在环形链表中能解决相遇问题；
+    * 在非环形链表中能解决中点问题；
+* fast、slow 一前一后：
+    * 在非环形链表中，可以解决 k 距离问题，倒数第 k 个节点问题；
+* 滑动窗口问题：
+    ```go
+    // 滑动窗口算法伪码框架
+    func slidingWindow(s string) {
+        // 用合适的数据结构记录窗口中的数据，根据具体场景变通
+        // 比如说，我想记录窗口中元素出现的次数，就用 map
+        // 如果我想记录窗口中的元素和，就可以只用一个 int
+        var window = ...
+
+        left, right := 0, 0
+        for right < len(s) {
+            // c 是将移入窗口的字符
+            c := rune(s[right])
+            window[c]++
+            // 增大窗口
+            right++
+            // 进行窗口内数据的一系列更新
+            ...
+
+            // 判断左侧窗口是否要收缩
+            for left < right && window needs shrink { //replace "window needs shrink" with actual condition
+                // d 是将移出窗口的字符
+                d := rune(s[left])
+                window[d]--
+                // 缩小窗口
+                left++
+                // 进行窗口内数据的一系列更新
+                ...
+            }
+        }
+    }
+    ```
+* 左右指针相向而行：
+
 ## 回溯/DFS
 
 ```python
@@ -97,6 +138,7 @@ func BFS(start Node, target Node) int {
   
     q = append(q, start) // 将起点加入队列
     visited[start] = true
+    step := 0
 
     for len(q) > 0 {
         sz := len(q)
@@ -116,8 +158,10 @@ func BFS(start Node, target Node) int {
                 }
             }
         }
+        step++
     }
     // 如果走到这里，说明在图中没有找到目标节点
+    return step
 }
 ```
 
