--- a/docs/01.语言/02.C++/05.多态.md
+++ b/docs/01.语言/02.C++/05.多态.md
@@ -154,6 +154,19 @@ Animal deconstruct
 * 以上述虚函数举例：
   * animal1 实际指向的是 `Dog` 类的对象，那么会通过该对象的虚表指针找到其类的虚函数表，并调用其重载的虚函数；
 
+## 六、其他
+<!-- 在C++中，构造函数不能是虚函数，原因主要有以下几点：
+
+构造函数的目的：构造函数的主要目的是初始化对象。当一个对象被创建时，必须先调用构造函数来初始化对象的状态。如果构造函数是虚的，那么在创建对象时，我们无法确定应该调用哪个具体的构造函数，因为对象的具体类型在创建时可能还未知。
+
+多态的实现：多态是基于虚函数表（vtable）实现的，而虚函数表是在对象构造之后才建立的。在对象构造之前，虚函数表尚未建立，因此无法通过虚函数表来调用虚构造函数。
+
+对象内存的分配：在构造函数执行之前，对象的内存空间已经被分配，但是对象的状态尚未初始化。如果构造函数是虚的，那么在内存分配之后，我们需要确定调用哪个构造函数来初始化对象，这在逻辑上是矛盾的，因为我们无法在对象初始化之前知道其具体类型。虚函数的调用需要虚函数表指针，而该指针存放在对象的内容空间中；若构造函数声明为虚函数，那么由于对象还未创建，还没有内存空间，更没有虚函数表地址用来调用虚函数——构造函数了。
+
+基类构造和派生类构造：在派生类的构造过程中，首先需要调用基类的构造函数来初始化基类部分。如果基类的构造函数是虚的，那么在派生类构造函数中调用基类构造函数时，可能会错误地调用派生类的构造函数，这会导致无限递归构造，最终导致栈溢出。
+
+对象切片问题：如果构造函数是虚的，那么在将派生类对象赋值给基类对象时，可能会调用派生类的构造函数，这会导致对象切片问题，即派生类特有的部分被“切掉”，这显然是不合理的。 -->
+
 <!-- 
 ```cpp
 #include <iostream>
