--- a/docs/04.计算机基础/03.数据结构与算法/01.常见算法题框架.md
+++ b/docs/04.计算机基础/03.数据结构与算法/01.常见算法题框架.md
@@ -19,6 +19,7 @@ author:
 * fast、slow 一前一后：
     * 在非环形链表中，可以解决 k 距离问题，倒数第 k 个节点问题；
 * 滑动窗口问题：
+    * 疑难点：如何判断窗口的收缩条件
     ```go
     // 滑动窗口算法伪码框架
     func slidingWindow(s string) {
@@ -53,7 +54,7 @@ author:
 * 左右指针相向而行：
 
 ## 回溯/DFS
-
+* 疑难点：如何做出选择
 ```python
 result = []
 def backtrack(路径, 选择列表):
@@ -213,7 +214,7 @@ func inArea(grid [][]int, r, c int) bool {
 ```
 
 ## 动态规划
-
+* 疑难点：如何列出状态转移方程
 ```python
 # 自顶向下递归的动态规划
 def dp(状态1, 状态2, ...):
