--- a/docs/01.语言/01.Go/26.普通方法与接口方法.md
+++ b/docs/01.语言/01.Go/26.普通方法与接口方法.md
@@ -340,7 +340,7 @@ func main() {
 
 ### 4，接收者应该是值
 * 接收者不需要被方法更新时；
-* 接收者是有基础类型构成的小数组或者结构体，并且不饱和可变的成员时；
+* 接收者是有基础类型构成的小数组或者结构体，并且不包含可变的成员时；
 * 接收者是想 int、float64、string 这样的基础类型时；
 
 ## 七、检测接口的实现
