--- a/docs/02.后端技术/03.Docker/11.Docker中执行crond.md
+++ b/docs/02.后端技术/03.Docker/11.Docker中执行crond.md
@@ -39,3 +39,27 @@ CMD crond
 * 在当前目录执行`docker build -t cron:v1 .`命令，构建镜像；
 * 执行`docker run -d --name my_cron cron:v1`命令，创建容器并后台运行；
 * 执行`docker exec -it my_cron tail -f /var/log/my-cron-job.log`命令，查看日志输出情况；
+
+<!-- Docker 是一个开源的应用容器引擎，它允许开发者打包他们的应用以及应用的依赖包到一个可移植的容器中，然后发布到任何流行的 Linux 机器上，也可以实现虚拟化。容器是完全使用沙箱机制，相互之间不会有任何接口。
+
+`docker stop` 命令是用来停止一个或多个正在运行的容器的。其工作原理主要涉及以下几个步骤：
+
+1. **发送停止信号**：
+   - 当执行 `docker stop` 命令时，Docker 客户端会向 Docker 守护进程发送一个请求，要求停止指定的容器。
+   - Docker 守护进程会向容器发送 `SIGTERM` 信号。这是一个终止信号，它请求容器内部的主进程（PID 1）优雅地关闭。这意味着容器内的进程有机会完成任何必要的清理工作，比如保存状态、关闭网络连接、释放资源等。
+
+2. **等待容器响应**：
+   - Docker 会等待一定时间（默认是 10 秒），让容器内的进程响应 `SIGTERM` 信号并优雅地关闭。
+   - 如果容器内的进程在这段时间内没有关闭，Docker 会发送 `SIGKILL` 信号，这是一个强制终止信号，不会给进程清理的机会。
+
+3. **容器停止**：
+   - 一旦容器内的所有进程都关闭，容器的状态就会变为“已停止”。
+   - Docker 守护进程会停止分配资源给这个容器，包括 CPU、内存、网络等。
+
+4. **清理网络和存储资源**：
+   - 容器停止后，Docker 会清理与容器相关的网络设置和存储卷，但不会删除容器本身。如果需要完全删除容器，可以使用 `docker rm` 命令。
+
+5. **返回控制台**：
+   - 一旦容器被停止，Docker 守护进程会向 Docker 客户端返回操作结果，客户端随后会将结果展示给用户。
+
+`docker stop` 命令的优雅之处在于它允许容器内的应用程序有机会响应停止信号并执行必要的清理操作，这有助于防止数据丢失和不一致的状态。如果容器没有响应 `SIGTERM`，`SIGKILL` 信号则确保容器会被强制停止，尽管这可能不是最优雅的停止方式。 -->
