--- a/docs/02.后端技术/01.MySql/02.MySQL 索引简述.md
+++ b/docs/02.后端技术/01.MySql/02.MySQL 索引简述.md
@@ -89,7 +89,7 @@ author:
 * 在叶子节点中，使用二分法快速定位要查询的记录在哪个槽（哪个记录分组）；
 * 定位到槽后，再遍历槽内的所有记录，找到对应的记录；
 
-### 3，聚集索引
+### 3，聚簇索引
 * 聚簇索引的叶子节点存放的是实际数据，所有完整的用户记录都存放在聚簇索引的叶子节点；
 * 聚簇索引的叶子节点还记录了主键值、事务 id、用于事务和 MVCC 的回滚指针以及所有的剩余列；
 * 二级索引的叶子节点存放的是主键值，而不是实际数据；
@@ -116,7 +116,7 @@ author:
 * 索引下推
     * MySQL 5.6 引入的索引下推优化，可以在联合索引遍历过程中，对联合索引中包含的字段先做判断，直接过滤掉不满足条件的记录，减少回表次数；
     * 索引下推的大概原理是：截断的字段不会在 Server 层进行条件判断，而是会被下推到「存储引擎层」进行条件判断，然后过滤出符合条件的数据后再返回给 Server 层，由于在引擎层就过滤掉大量的数据，无需再回表读取数据来进行判断，减少回表次数，从而提升了性能；
-* 索引区分区
+* 索引区分度
     * 建立联合索引时，要把区分度大的字段排在前面，这样区分度大的字段越有可能被更多的 SQL 使用到；
     * 区分度就是某个字段 column 不同值的个数「除以」表的总行数；
 * 缺点：
