--- a/docs/02.后端技术/03.Docker/11.Docker中执行crond.md
+++ b/docs/02.后端技术/03.Docker/11.Docker中执行crond.md
@@ -62,4 +62,14 @@ CMD crond
 5. **返回控制台**：
    - 一旦容器被停止，Docker 守护进程会向 Docker 客户端返回操作结果，客户端随后会将结果展示给用户。
 
-`docker stop` 命令的优雅之处在于它允许容器内的应用程序有机会响应停止信号并执行必要的清理操作，这有助于防止数据丢失和不一致的状态。如果容器没有响应 `SIGTERM`，`SIGKILL` 信号则确保容器会被强制停止，尽管这可能不是最优雅的停止方式。 -->
+`docker stop` 命令的优雅之处在于它允许容器内的应用程序有机会响应停止信号并执行必要的清理操作，这有助于防止数据丢失和不一致的状态。如果容器没有响应 `SIGTERM`，`SIGKILL` 信号则确保容器会被强制停止，尽管这可能不是最优雅的停止方式。
+
+在 Docker 容器中，如果有多个进程运行，主进程的确定仍然依赖于容器的启动方式。Docker 容器的主进程是通过以下方式确定的：
+
+ENTRYPOINT 和 CMD：如前所述，容器启动时执行的命令（即主进程）是由 Dockerfile 中的 ENTRYPOINT 和 CMD 指令决定的。无论容器内有多少个进程，Docker 只会将 ENTRYPOINT 指定的命令视为主进程。
+PID 1：在容器内部，启动的第一个进程会获得 PID 1。Docker 将这个进程视为主进程。其他进程将作为子进程运行。由于 PID 1 进程负责处理信号和管理子进程，因此它的行为会影响整个容器的生命周期。
+进程管理：如果容器内的主进程（PID 1）终止，Docker 容器将停止运行。这意味着即使有其他进程在运行，只要主进程结束，整个容器也会被视为结束。
+使用进程管理工具：在某些情况下，可能会使用进程管理工具（如 supervisord 或 s6）来管理多个进程。在这种情况下，进程管理工具本身会作为主进程运行，并负责启动和管理其他进程。
+因此，尽管容器内可以有多个进程，但 Docker 仍然只会将 ENTRYPOINT 或 CMD 指定的命令（或 PID 1 进程）视为主进程。
+
+ -->
