--- a/docs/01.语言/01.Go/07.Sync RWMutex.md
+++ b/docs/01.语言/01.Go/07.Sync RWMutex.md
@@ -158,3 +158,17 @@ func (r *rlocker) Lock()   { (*RWMutex)(r).RLock() }
 func (r *rlocker) Unlock() { (*RWMutex)(r).RUnlock() }
 ```
 * RLocker 返回一个 Locker 接口，该接口通过调用 rw.RLock 和 rw.RUnlock.来实现 Lock 和 Unlock 方法
+
+## 五、总结
+* 1，写 goroutine 获取了互斥锁：
+	* 将 readerCount 加到 readerWait 上，并将 readerCount 置为负数，如果 readerWait 不为 0，表示虽然当前写 goroutine 获取了互斥锁，但是前面还有读 goroutine 没有完成，需要等待 readerWait 数量的 goroutine 完成读后，将当前获取互斥锁但被阻塞的 goroutine 唤醒；
+	* readerCount < 0 表示当前有写 goroutine 获得了互斥锁但是被阻塞了；
+	* 新来的写 goroutine 因为没有获取互斥锁而被阻塞；
+	* 新来的读 goroutine 直接 readerCount+1，但是仍然是负数，而被阻塞；
+* 2，写 goroutine 完成了任务后：
+	* 将 readerCount 置为正数，并将这些因写 goroutine 而阻塞的读 goroutine 唤醒，然后释放锁；
+* 3，读 goroutine 完成任务后：
+	* 将 readerCount-1，如果还小于 0，那么说明此时有写 goroutine 获取了互斥锁当时因为需要等待读 goroutine 完成任务而被阻塞；
+	* readerWait 表示当前需要被等待的读 goroutine 的数量，readerWait-1 后如果为 0 即可唤醒前面阻塞的写 goroutine；
+* 4，新的写 goroutine 可以获取到互斥锁了，重复 1 步骤；
+* 5，新的读 goroutine 直接 readerCount+1，如果是负数说明有写 goroutine 在处理流程中需要被则阻塞；如果是正数，说明没有写 goroutine 在处理，可以正常执行处理流程；
