--- a/docs/01.语言/01.Go/14.chan.md
+++ b/docs/01.语言/01.Go/14.chan.md
@@ -1030,7 +1030,7 @@ func closechan(c *hchan) {
 - 被唤醒后，生产者 goroutine 会继续执行 chansend 函数里 goparkunlock 函数之后的代码，检测到自己是因为 chan 关闭而被唤醒的，直接 panic；消费者 goroutine 同样会继续执行 chanrecv 函数里 goparkunlock 函数之后的代码，检测到自己是因为 chan 关闭而被唤醒的，返回 received 为 false，表示读取的是零值；
 - 关闭 chan 后，对于阻塞等待的消费者而言，会收到一个相应类型的零值，对于阻塞等待的生产者而言，会直接 panic，所以，在不了解 chan 还有没有接收者的情况下，不能贸然关闭 chan；
 
-### 7，selectnb\*
+### 7，selectnb
 
 ::: details
 
