--- a/docs/02.后端技术/01.MySql/06.MySQL 锁简述.md
+++ b/docs/02.后端技术/01.MySql/06.MySQL 锁简述.md
@@ -79,7 +79,7 @@ author:
 * 在同一个范围内，**插入意向锁与间隙锁是冲突的**；
 * 当其它事务持有该间隙的间隙锁时，插入操作就会发生阻塞，**需要等待其它事务释放间隙锁之后，才能获取到插入意向锁**；
 * 在此期间会先生成一个插入意向锁，但处于等待状态「**可能因等待造成死锁**」，表明有事务想在某个区间插入新记录；
-* 间隙锁锁住的是一个区间，*「插入意向锁」*锁住的是一个点；
+* 间隙锁锁住的是一个区间，**「插入意向锁」**锁住的是一个点；
 
 ## 二、加锁过程
 ### 1，唯一索引进行等值查询
@@ -87,13 +87,17 @@ author:
 * 当条件值不存在时，组合锁会退化成「间隙锁」；
 
 ### 2，唯一索引范围查询
-* 「大于等于」范围查询，当条件值存在且唯一时，该条件值记录的组合锁会退化成「记录锁」，其他记录仍然为组合锁；
-* 「大于等于」范围查询，当条件值不存在时，所有记录都为组合锁，最后一个不符合条件的记录和第一个符合条件的记录也会形成组合锁，同时其他事务无法在这个区间插入数据（X型锁互斥）；
-* 「小于或者小于等于」范围查询，当条件值记录不在表中，**终止范围查询的记录**的组合锁会退化成间隙锁，其他记录仍然为组合锁；
-* 「小于或者小于等于」范围查询，当条件值记录在表中，所有记录仍然为组合锁；
-* 「小于」范围查询，当条件值记录在表中，**终止范围查询的记录**的组合锁会退化成间隙锁，其他记录仍然为组合锁；
-* 因为组合锁是前开后闭，对小于或小于等于的范围查询，可能满足前开但不满足后闭，所以可能会有记录的退化为间隙锁的情况；
-* 对于大于等于的范围查询，可能满足后闭但不满足前开，所以可能会有记录退化为记录锁的情况；
+* 「大于等于」范围查询：
+  * 当条件值存在且唯一时，该条件值记录的组合锁会退化成「记录锁」，其他记录仍然为组合锁；
+  * 当条件值不存在时，所有记录都为组合锁，最后一个不符合条件的记录和第一个符合条件的记录也会形成组合锁，同时其他事务无法在这个区间插入数据（X型锁互斥）；
+* 「小于或者小于等于」范围查询：
+  * 当条件值记录不在表中，**终止范围查询的记录**的组合锁会退化成间隙锁，其他记录仍然为组合锁；
+  * 当条件值记录在表中，所有记录仍然为组合锁；
+* 「小于」范围查询：
+  * 当条件值记录在表中，**终止范围查询的记录**的组合锁会退化成间隙锁，其他记录仍然为组合锁；
+* 因为组合锁是前开后闭的：
+  * 对小于或小于等于的范围查询，可能满足前开但不满足后闭，所以可能会有记录的退化为间隙锁的情况；
+  * 对于大于等于的范围查询，可能满足后闭但不满足前开，所以可能会有记录退化为记录锁的情况；
 
 ### 3，非唯一索引等值查询
 * 同时存在主键索引和非唯一索引，非唯一索引加锁时，对满足查询条件的记录会对它们的主键索引也加锁；
