--- a/docs/04.计算机基础/03.数据结构与算法/01.常见算法题框架.md
+++ b/docs/04.计算机基础/03.数据结构与算法/01.常见算法题框架.md
@@ -12,7 +12,7 @@ author:
   link: https://github.com/erlangtui
 ---
 
-## 双指针
+## 一、双指针
 * fast、slow 快慢指针，slow 走一步，fast 走两步：
     * 在环形链表中能解决相遇问题；
     * 在非环形链表中能解决中点问题；
@@ -53,8 +53,13 @@ author:
     ```
 * 左右指针相向而行：
 
-## 回溯/DFS
-* 疑难点：如何做出选择
+## 二、回溯
+* 疑难点：如何做出选择以及提前剪枝；
+* 决策树遍历时的基本模型：
+    * 1、路径：就是已经做出的选择。
+    * 2、选择列表：就是当前可以做的选择。
+    * 3、剪枝条件：就是过滤不合法的节点，避免走回头路和重复。
+    * 4、结束条件：就是到达决策树底层，无法再做选择的条件。
 ```python
 result = []
 def backtrack(路径, 选择列表):
@@ -68,22 +73,53 @@ def backtrack(路径, 选择列表):
         backtrack(路径, 选择列表)
         撤销选择
 ```
+* 其核心就是 for 循环里面的递归，在递归调用之前「做选择」，在递归调用之后「撤销选择」；
+* 常见题型：
+    * 排列组合问题、子集问题、N皇后问题、数独问题；
+    * 球盒模型，分别为「球」的视角穷举和「盒」的视角穷举，对应两种不同的代码写法。
 
-## 二叉树DFS
+## 三、多叉树回溯
 
-```go
-func traverse(root *TreeNode) {
-    // 判断 base case
-    if (root == nil) {
+```java
+void backtrack(Node root) {
+    if (root == null) {
         return;
     }
-    // 访问两个相邻结点：左子结点、右子结点
-    traverse(root.left);
-    traverse(root.right);
+
+    for (Node child : root.children) {
+        // 做选择
+        printf("我在 %s 和 %s 中间的树枝上做选择", root, child);
+
+        backtrack(child);
+
+        // 撤销选择
+        printf("我在 %s 和 %s 中间的树枝上撤销选择", root, child);
+    }
 }
 ```
 
-## 网格DFS
+## 四、多叉树DFS
+``` java
+// DFS 算法框架模板
+void dfs(Node root) {
+    if (root == null) {
+        return;
+    }
+    // 做选择
+    printf("我在 %s 节点上做选择", root);
+
+    for (Node child : root.children) {
+        dfs(child);
+    }
+
+    // 撤销选择
+    printf("我在 %s 节点上撤销选择", root);
+}
+```
+* 回溯算法的关注点在「树枝」，DFS 算法的关注点在「节点」。
+
+
+## 五、网格DFS
 
 * 整体思想：遍历到某个节点时，递归遍历其周围节点，沿着某个方向直至到边界节点，再逐步返回，重复该步骤；
 * 遍历到当前节点的第一个周围节点时，继续递归遍历该周围节点的周围节点，直到最后一个节点（边界节点）；
@@ -94,35 +130,34 @@ func traverse(root *TreeNode) {
 * 在这个遍历过程中，不同节点的周围节点可能存在重复的情况，需要记录节点是否已经被遍历过，避免重复遍历；
 
 ```go
-func dfs(grid [][]int, r, c int) {
-    // 判断 base case
-    // 如果坐标 (r, c) 超出了网格范围，直接返回
-    if (!inArea(grid, r, c)) {
-        return;
+// 二维矩阵遍历框架
+func dfs(grid [][]int, i, j int, visited [][]bool) {
+    m, n := len(grid), len(grid[0])
+    if i < 0 || j < 0 || i >= m || j >= n {
+        // 超出索引边界
+        return
+    }
+    if visited[i][j] {
+        // 已遍历过 (i, j)
+        return
     }
 
-    // 避免重复
-    if (grid[r][c] != 1) {
-        // 如果这个格子已经遍历过直接返回
-        return;
-    }
-    grid[r][c] = 2; // 将格子标记为「已遍历过」
+    // 进入当前节点 (i, j)
+    visited[i][j] = true
 
-    // 访问上、下、左、右四个相邻结点
-    dfs(grid, r - 1, c);
-    dfs(grid, r + 1, c);
-    dfs(grid, r, c - 1);
-    dfs(grid, r, c + 1);
-}
-
-// 判断坐标 (r, c) 是否在网格中
-func inArea(grid [][]int, r, c int) bool {
-    return 0 <= r && r < len(grid)
-        	&& 0 <= c && c < len(grid[0]);
+    // 进入相邻节点（四叉树）
+    // 上
+    dfs(grid, i - 1, j, visited)
+    // 下
+    dfs(grid, i + 1, j, visited)
+    // 左
+    dfs(grid, i, j - 1, visited)
+    // 右
+    dfs(grid, i, j + 1, visited)
 }
 ```
 
-## BFS
+## 六、网格BFS
 
 * 整体思想：遍历到某个节点时，遍历其周围节点，先把周围所有的节点都遍历完，再遍历下个节点，重复该步骤遍历其周围节点；
 * 遍历到第一个节点时，将其所有的周围节点加入到某个队列中，这个队列表示下一次应该要遍历完的节点；
@@ -165,26 +200,7 @@ func BFS(start Node, target Node) int {
     return step
 }
 ```
-
-## 二叉树BFS
-
 ```go
-// TODO
-func traverse(root *TreeNode) {
-    // 判断 base case
-    if (root == nil) {
-        return;
-    }
-    // 访问两个相邻结点：左子结点、右子结点
-    traverse(root.left);
-    traverse(root.right);
-}
-```
-
-## 网格DFS
-
-```go
-// TODO
 func dfs(grid [][]int, r, c int) {
     // 判断 base case
     // 如果坐标 (r, c) 超出了网格范围，直接返回
@@ -212,8 +228,23 @@ func inArea(grid [][]int, r, c int) bool {
         	&& 0 <= c && c < len(grid[0]);
 }
 ```
+## 七、二叉树BFS
 
-## 动态规划
+```go
+// TODO
+func traverse(root *TreeNode) {
+    // 判断 base case
+    if (root == nil) {
+        return;
+    }
+    // 访问两个相邻结点：左子结点、右子结点
+    traverse(root.left);
+    traverse(root.right);
+}
+```
+
+
+## 八、动态规划
 * 疑难点：如何列出状态转移方程
 ```python
 # 自顶向下递归的动态规划
