--- a/docs/02.后端技术/01.MySql/04.MySQL 事务简述.md
+++ b/docs/02.后端技术/01.MySql/04.MySQL 事务简述.md
@@ -40,7 +40,7 @@ author:
 ### 1，脏读
 * 如果一个事务「读到」了另一个「未提交事务修改过的数据」，就意味着发生了「脏读」现象；
 * A事务读取了数据并进行了更改，还未提交；B读取了更改后提交前的数据；A事务触发了回滚；
-* 此时B读到的就是过期的诗句，这种现象就被称为脏读；
+* 此时B读到的就是过期的数据，这种现象就被称为脏读；
 
 ### 2，不可重复读
 * 在一个事务内多次读取同一个数据，如果出现前后两次读到的数据不一样的情况，就意味着发生了「不可重复读」现象；
@@ -60,7 +60,7 @@ author:
 ### 1，隔离级别
 * 读未提交（read uncommitted），指一个事务还没提交时，它做的变更就能被其他事务看到；
 * 读提交（read committed），指一个事务提交之后，它做的变更才能被其他事务看到；
-* 可重复读（repeatable read），指一个事务执行过程中看到的数据，一直跟这个事务启动时看到的数据是一致的，** MySQL InnoDB 引擎的默认隔离级别 **；
+* 可重复读（repeatable read），指一个事务执行过程中看到的数据，跟这个事务启动时看到的数据一直都是一致的，**MySQL InnoDB 引擎的默认隔离级别**；
 * 串行化（serializable ）；会对记录加上**读写锁**，在多个事务对这条记录进行读写操作时，如果发生了读写冲突的时候，后访问的事务必须等前一个事务执行完成，才能继续执行
 
 ### 2，等级与性能
