--- a/docs/02.后端技术/01.MySql/07.MySQL 日志简述.md
+++ b/docs/02.后端技术/01.MySql/07.MySQL 日志简述.md
@@ -42,7 +42,7 @@ author:
 ### 3，持久化
 * 为了防止断电导致数据丢失的问题，当有一条记录需要更新的时候，InnoDB 引擎就会先更新内存（同时标记为脏页），然后将本次对这个页的修改以 redo log 的形式记录下来，这个时候更新就算完成了；
 * InnoDB 引擎会在适当的时候，由后台线程将缓存在 Buffer Pool 的脏页刷新到磁盘里；
-* Buffer Pool 除了缓存**「索引页」和「数据页」，还包括了 Undo 页，插入缓存、自适应哈希索引、锁信息**等等。
+* Buffer Pool 除了缓存 **「索引页」和「数据页」，还包括了 Undo 页，插入缓存、自适应哈希索引、锁信息** 等等。
 * undo log 和数据页的刷盘策略是一样的，都需要通过 redo log 保证持久化。
 * buffer pool 中有 undo 页，对 undo 页的修改也都会记录到 redo log。
 * redo log 会每秒刷盘，提交事务时也会刷盘，数据页和 undo 页都是靠这个机制保证持久化的。
@@ -83,7 +83,7 @@ author:
 #### 5.4 后台线程
 * 每隔1s执行一次；
 * 针对参数 0 ：调用 write() 把缓存在 redo log buffer 中的 redo log 写到操作系统的 Page Cache，然后调用 fsync() 持久化到磁盘，**MySQL 进程的崩溃**会导致上一秒钟所有事务数据的丢失;
-* 针对参数 2 ：调用 fsync，将缓存在操作系统中 Page Cache 里的 redo log 持久化到磁盘，只有在**操作系统崩溃或者系统断电**的情况下，上一秒钟所有事务数据才可能丢失；
+* 针对参数 2 ：调用 fsync，将缓存在操作系统中 Page Cache 里的 redo log 持久化到磁盘，只有在**操作系统崩溃或者系统断电**的情况下，上一秒钟所有事务数据才可能丢失，进程崩溃的话数据也还在；
 #### 5.5 场景比较
 * 数据安全性：参数 1 > 参数 2 > 参数 0
 * 写入性能：参数 0 > 参数 2> 参数 1
