--- a/docs/02.后端技术/01.MySql/06.MySQL 锁简述.md
+++ b/docs/02.后端技术/01.MySql/06.MySQL 锁简述.md
@@ -79,7 +79,7 @@ author:
 * 在同一个范围内，**插入意向锁与间隙锁是冲突的**；
 * 当其它事务持有该间隙的间隙锁时，插入操作就会发生阻塞，**需要等待其它事务释放间隙锁之后，才能获取到插入意向锁**；
 * 在此期间会先生成一个插入意向锁，但处于等待状态「**可能因等待造成死锁**」，表明有事务想在某个区间插入新记录；
-* 间隙锁锁住的是一个区间，**「插入意向锁」**锁住的是一个点；
+* 间隙锁锁住的是一个区间，「**插入意向锁**」锁住的是一个点；
 
 ## 二、加锁过程
 ### 1，唯一索引进行等值查询
