--- a/docs/06.关于/01.关于我.md
+++ b/docs/06.关于/01.关于我.md
@@ -10,12 +10,35 @@ author:
 ---
 
 :::tip
-文章内容仅是我个人的小总结，资历尚浅，如有误还请指正。
+文章内容仅是我个人的小总结和一些学习笔记，资历尚浅，如有误还请指正。
 :::
+
+## 📚Blog
+* 记录自己的一些学习笔记、工作中遇到的问题及解决方法、源码阅读等，主要包含日常用到的[开发语言](https://erlangtui.top/lang/)和[后端技术](https://erlangtui.top/technology/)；
+
+## 🐼Me
+* 研究生学历，毕业于湖南大学，欢迎和各位一起交流学习；
+* 目前就职于新浪微博-广告流量引擎部门，主要做流量接入、广告投放、广告竞价、广告召回等相关工作；
+
+## 技能
+* 熟练掌握Go的基本语法和原理，对Slice、Map、Channel、Goroutine等有深入的了解，擅长并发编程；
+* 熟练掌握Echo、Gorm等框架，能够使用Go进行大型项目开发，熟悉C++、Python语言基本语法；
+* 熟悉常用的数据结构与算法、操作系统和计算机网络等基本知识、以及Linux下的常用命令和工具；
+* 熟悉Redis、MySQL、Docker、Kafka等常用的客户端命令与基本原理；
+* 了解Consul、Hive、Prometheus等使用方式
+
+
+
+## :email: 联系
+
+- Email:  <a href="mailto:1364255742@qq.com">1364255742@qq.com</a>
+- GitHub: <https://github.com/erlangtui>
+
 
 <!-- 小熊猫 -->
 
 <img src="/img/panda-waving.png" class="panda no-zoom" style="width: 130px;height: 115px;opacity: 0.8;margin-bottom: -4px;padding-bottom:0;position: fixed;bottom: 0;left: 0.5rem;z-index: 1;">
+
 
 <!--  
 
