--- a/docs/01.语言/01.Go/02.map.md
+++ b/docs/01.语言/01.Go/02.map.md
@@ -14,7 +14,7 @@ author:
 ---
 
 ::: tip
-本文代码基于 go1.17.13，src/runtime/chan.go
+本文代码基于 go1.17.13，src/runtime/map.go
 :::
 ## 一、简述
 * map 是一种内置的数据结构，以哈希表的方式存储键值对数据，能够在 O(1) 复杂度内查找、删除、更新数据；
