--- a/docs/01.语言/01.Go/12.sync Pool.md
+++ b/docs/01.语言/01.Go/12.sync Pool.md
@@ -340,7 +340,7 @@ func (c *poolChain) popHead() (interface{}, bool) {
 ```
 :::
 * 从链表的头部读取元素，尝试从 `head` 指向的节点的环形队列中开始读取元素，如果没有，则继续从前一个节点读取，即上图中 `prev` 指向的节点，直到读取到元素立即返回，当达到最后一个节点的 `prev` 时跳出循环，返回 `nil，false`；
-* <span style="color: red;">**从 `head` 往 `tail` 的过程中加载 `poolChainElt` 节点，虽然只有一个生产者，但是可能会与其他消费者从 `tail` 往 `head` 的过程中加载到同一个节点，所以此处需要原子操作；</span>
+* <span style="color: red;">**从 `head` 往 `tail` 的过程中加载 `poolChainElt` 节点，虽然只有一个生产者，但是可能会与其他消费者从 `tail` 往 `head` 的过程中加载到同一个节点，所以此处需要原子操作；**</span>
 * 在整个读取过程中，即使某个节点的环形队列为空，该节点也不会被删除；
 ##### (4) popTail
 :::details
@@ -425,12 +425,13 @@ type poolLocal struct {
 }
 ```
 :::
+
 * `poolLocalInternal` 是每一个 P 所拥有的私有对象和共享对象的元素；
   * `private` 当前 P 私有的对象，只能由其所属的当前 P 存储和获取；
   * `shared` 当前 P 与其他 P 共有双向链表，链表中存储对象，当前 P 是生产者，能够 `pushHead/popHead`，其他 P 是消费者，只能 `popTail`；
 * `poolLocal` 是 `poolLocalInternal` 按照内存对齐后的结构体；
 
-:::info
+::: tip
 * CPU 在访问数据是按照 64/128 字节作为一行一起加载的，如果某个变量不足一行，则会和其他变量同时加载进 CPU CacheLine，当一个变量失效时会导致该行其他变量也失效，这是一种伪共享现象；
 * 第一、二层 CPU 缓存是每个 CPU 各自独有的，第三层 CPU 缓存是不同 CPU 之间共享的，**CPU CacheLine 中有变量失效时，会导致整个 CPU CacheLine 都需要从主存中重新加载**，对性能有影响；
 * 如果没有 `pad` 字段，可能会导致一个 CPU CacheLine 中存在多个 `poolLocal` 对象，而这些对象又属于不同 CPU 上的 P，当某个 CPU 上的 P 修改了 CPU CacheLine 上的该 P 对应的 `poolLocal` 时，会导致其他 `poolLocal` 失效，那么该 `poolLocal` 对应的 P 所在的 CPU 就需要重新加载；
