--- a/docs/02.后端技术/01.MySql/02.MySQL 索引简述.md
+++ b/docs/02.后端技术/01.MySql/02.MySQL 索引简述.md
@@ -56,6 +56,9 @@ author:
 * 范围查找：
     * 所以叶子节点用双向链表连接，有利于范围查找；
 
+### 7，哈希表
+* 哈希表不支持范围查询、排序、前缀匹配、事务等；
+* 且不是自平衡结构，虽然查找复杂度为 O(1) 但是数据量变大之后冲突更多可能会退化为链表；
 
 ## 二、MySQL如何使用B+树索引
 ### 1，数据存储
